Fix slider overflow bug

--- a/src/components/GovProposalDetail/_style.scss
+++ b/src/components/GovProposalDetail/_style.scss
@@ -17,6 +17,10 @@
         .f-card {
             margin-top: 24px;
         }
+        
+        .f-slider {
+            overflow: hidden;
+        }
 
         .gov-proposal-detail__sub-title {
             font-weight: normal;
